fix: adjust heading sizes for better readability in styles

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -148,11 +148,11 @@
     }
 
     h3 {
-      @apply text-base font-semibold mt-2 mb-4;
+      @apply text-sm font-semibold mt-2 mb-4;
     }
 
     h4 {
-      @apply text-base font-semibold mt-5 mb-3;
+      @apply text-sm font-semibold mt-5 mb-3;
     }
 
     /* 段落 --------------------------------------- */
